--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,7 +44,13 @@ theme:
 
 markdown_extensions:
   - footnotes
+  - pymdownx.arithmatex:
+      generic: true
 
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+  
 extra:
   social:
     - icon: fontawesome/solid/paper-plane
