--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,12 @@
-site_name: LRT服务器制度 | LRT Server Rules
+site_name: LRT服务器 | LRT Server
 site_url: https://example.com/
 site_author: BuelieR(离烟)
 
 # 导航栏
 nav:
   - 首页: index.md
-  - 服务器项目标准: 
+  - 服务器标准:
+    - 基本规则: base_rules.md 
     - meter.md
     - road.md
     - railway.md
@@ -17,6 +18,7 @@ nav:
     - server_res.md
     - manger.md
     - city_plan.md
+    - 日月前事: past_events.md
 
 theme:
   name: material
@@ -46,14 +48,34 @@ theme:
       toggle:
         icon: material/weather-night
         name: Switch to light mode
+  icon:
+    admonition:
+      note: octicons/tag-16
+      abstract: octicons/checklist-16
+      info: octicons/info-16
+      tip: octicons/squirrel-16
+      success: octicons/check-16
+      question: octicons/question-16
+      warning: octicons/alert-16
+      failure: octicons/x-circle-16
+      danger: octicons/zap-16
+      bug: octicons/bug-16
+      example: octicons/beaker-16
+      quote: octicons/quote-16
   font:
     text: "Roboto Mono"
     code: "Roboto Mono"
 
 markdown_extensions:
   - footnotes
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
 
 extra:
+  copyright: Copyright &copy; 2026 LRT服务器 | LRT Server
   social:
     - icon: fontawesome/solid/paper-plane
       link: mailto:yydshmcl@outlook.com
+    - icon: fontawesome/brands/github
+      link: https://github.com/BuelieR/LRT_RULES
